Fix spacing for events section.

--- a/css/layout.css
+++ b/css/layout.css
@@ -15,6 +15,9 @@
   margin-bottom: .7em;
 }
 
+.logoPosition {
+  display: none;
+}
 
 
 /* ============================================ */
@@ -1034,7 +1037,7 @@
 
   .titlePosition {
     position: absolute;
-    right: 2%;
+    left: 2%;
     bottom: 10px;
   }
 
@@ -1049,4 +1052,14 @@
     width: 100%;
   }
 
+  .eventContent {
+    margin: 1em 0 0 4em;
+  }
+
+  .logoPosition {
+    display: block;
+    position: absolute;
+    top: 1em;
+    right: 1em;
+  }
 }
