--- a/css/state.css
+++ b/css/state.css
@@ -1,3 +1,8 @@
-.link:hover {
+.bigLink:hover {
   color: #aaa;
+}
+
+.smallLink:hover {
+  background-color: rgb(0, 121, 125);
+  transition: .5s;
 }
